# 6502-Emulator

./: .gitignore  CMakeLists.txt  Datasheet.md  LICENSE  README.md
src/: cpu.cpp  main.cpp  memory.cpp
src/include/: cpu.h  memory.h  utils.h
